[project]
name = "ckan-pycsw"
version = "2.6.1"
description = "Populate PyCSW using metadata from a CKAN Open Data catalog"
authors = [
    {name = "mjanez", email = "96422458+mjanez@users.noreply.github.com"},
]
dependencies = [
    "pygeometa==0.13.1",
    "pycsw==2.6.1",
    "owslib==0.27.2",
    "setuptools==65.6.0",
    "sqlalchemy==1.4.44,<2.0",
    "requests==2.28.1",
    "shapely==1.8.5.post1",
    "pyyaml==6.0",
    "ptvsd==4.3.2",
    "debugpy==1.8.0",
    "simplejson==3.19.1",
    "apscheduler==3.10.1",
    "psutil==5.9.5",
    "urllib3==1.26.20",
    "gunicorn>=20.1.0",
]
requires-python = ">=3.9"
license = {text = "GPLv3"}

[project.urls]
Homepage = "https://github.com/mjanez/ckan-pycsw"
Repository = "https://github.com/mjanez/ckan-pycsw.git"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
