[project]
name = "ckan-pycsw"
version = "3.0-dev"
description = "Populate PyCSW using metadata from a CKAN Open Data catalog"
authors = [
    {name = "mjanez", email = "96422458+mjanez@users.noreply.github.com"},
]
dependencies = [
    "pygeometa==0.14.0",
    # pycsw 3.0 installed from GitHub (not yet available on PyPI)
    "pycsw @ git+https://github.com/geopython/pycsw.git@master",
    # OWSLib 0.29+ required for pycsw 3.0 (md.identification as list)
    # See: https://github.com/geopython/pycsw/issues/1076
    "owslib==0.35.0",
    # pycsw 3.0 standalone requirements (Flask-based multi-API server)
    "flask==3.1.2",
    "pygeofilter==0.3.1",
    "pygeoif==1.6.0",
    "setuptools==80.9.0",
    "sqlalchemy>=1.4.0,<2.0",
    "requests==2.32.5",
    "shapely==2.1.2",
    "pyyaml==6.0.3",
    "ptvsd==4.3.2",
    "debugpy==1.8.17",
    "simplejson==3.20.2",
    "apscheduler==3.11.0",
    "psutil==7.1.2",
    "urllib3==2.5.0",
    "gunicorn==23.0.0"
]
requires-python = ">=3.11"
license = {text = "GPLv3"}

[project.urls]
Homepage = "https://github.com/mjanez/ckan-pycsw"
Repository = "https://github.com/mjanez/ckan-pycsw.git"
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "requests-mock>=1.11.0",
    "flake8>=6.0.0",
    "safety>=2.3.5",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
